--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,134 @@
+*{
+    font-family: 'Open Sans', sans-serif;
+}
 body{
-    display:grid;
-    border: 1px solid black;
-    width:75%;
+    display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    grid-template-rows: 1fr 1fr 1fr ;
-    grid-template-columns: 1fr 1fr 1fr;
+    width:100%;
+}
+.wrapper{
+    display:grid;
+    width: 70%;
+    grid-template-rows: 1fr 4fr 4fr .25fr;
+    grid-template-columns: 1fr 1fr .4fr;
 }
 
 .heading{
+    display: grid;
     align-content: flex-start;
     width: auto;
     border: 3px solid black;
     grid-row: 1;
     grid-column: 1/4;
+    background-color: green;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    position: fixed;
+    width:69.7%;
+    z-index:5;
 }
 
 .main{
     border: 3px solid black;
     justify-content: flex-start;
     width: auto;
+    grid-row: 2/-2;
+    grid-column: 1/3;
+    background-color: lightgreen;
 }
 .sidenav{
+    display: flexbox;
     border: 3px solid black;
-    grid-row: 2/4;
+    grid-row: 2/-2;
     grid-column: 3/4;
+    background-color: green;
+}
+.sidenav div{
+    justify-content: center;
 }
 .footer{
-    align-items: flex-end;
+    grid-row: 4;
+    grid-column: 1/4;
+    background-color: green;
+    color: lightgreen;
+    text-align: right;
+    border: 2px solid black;
 }
 .LI-profile-badge{
     align-content: flex-end;
+    border: 2px solid lightgreen;
+}
+.weeks{
+    border: 2px solid lightgreen;
+}
+li{
+    text-decoration: none;
+}
+.images{
+    border: 3px solid lightblue;
+    width: 250px;
+    height: auto;
+    object-fit: contain;
+}
+.postarea3{
+    grid-row: auto;
+    grid-column: 1/3;
+    border: 2px solid black;
+    padding: 10px;
+}
+.postarea2{
+    grid-row: auto;
+    grid-column: 1/3;
+    border: 2px solid black;
+    padding: 10px;
+}
+.postarea1{
+    grid-row: auto;
+    grid-column: 1/3;
+    border: 2px solid black;
+    padding: 10px;
+}
+.navigation-bar{
+    display: grid;
+    background-color: lightblue;
+    text-align: center;
+    font-size: 25pt;
+    height: 70px;
+    text-decoration: none;
+    grid-column: 1/9;
+    grid-row: 2;
+    border: 3px solid white;
+    color: white;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 2fr 1fr 5fr 1fr 2fr 1fr;
+}
+a{
+    text-decoration: none;
+    color:white;
+}
+
+.search-bar{
+    justify-content: flex-end;
+    float: right;
+    grid-column: 6;
+    height: 25px;
+}
+nav{
+    grid-column: 4;
+    grid-row: 1;
+    vertical-align: center;
+}
+h1{
+    text-align: center;
+    font-weight: bold;
+    border: 2px solid lightgreen;
+    width: 500px;
+    grid-column: 2;
+    color: lightblue;
+}
+h2{
+    border: 2px solid green;
+}
+p{
+    border: 2px solid green;
 }
