--- a/styles.css
+++ b/styles.css
@@ -5,26 +5,26 @@ body{
     display: flex;
     justify-content: center;
     width:100%;
+    background-color: bisque;
 }
 .wrapper{
-    display:grid;
-    width: 70%;
-    grid-template-rows: 1fr 4fr 4fr .25fr;
+    display: grid;
+    width: 75%;
+    grid-template-rows: .8fr 4fr 4fr .2fr;
     grid-template-columns: 1fr 1fr .4fr;
 }
 
 .heading{
     display: grid;
     align-content: flex-start;
-    width: auto;
+    width:74.6%;
     border: 3px solid black;
     grid-row: 1;
     grid-column: 1/4;
-    background-color: green;
+    background: rgb(0, 102, 0, 0.5);
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     position: fixed;
-    width:69.7%;
     z-index:5;
 }
 
@@ -37,19 +37,22 @@ body{
     background-color: lightgreen;
 }
 .sidenav{
-    display: flexbox;
+    display: flex;
     border: 3px solid black;
-    grid-row: 2/-2;
+    grid-row: 2/-1;
     grid-column: 3/4;
-    background-color: green;
+    background-color: rgb(0, 102, 0);
+    flex-direction: column;
+    padding: 10px;
 }
+
 .sidenav div{
     justify-content: center;
 }
 .footer{
     grid-row: 4;
     grid-column: 1/4;
-    background-color: green;
+    background-color: rgb(0, 102, 0);
     color: lightgreen;
     text-align: right;
     border: 2px solid black;
@@ -57,12 +60,16 @@ body{
 .LI-profile-badge{
     align-content: flex-end;
     border: 2px solid lightgreen;
+
+}
+.LI-profile-badge:hover{
+    border: 2px solid lightblue;
 }
 .weeks{
     border: 2px solid lightgreen;
 }
-li{
-    text-decoration: none;
+.weeks:hover{
+    border: 2px solid lightblue;
 }
 .images{
     border: 3px solid lightblue;
@@ -88,11 +95,11 @@ li{
     border: 2px solid black;
     padding: 10px;
 }
-.navigation-bar{
+#nav-placeholder{
     display: grid;
     background-color: lightblue;
     text-align: center;
-    font-size: 25pt;
+    font-size: 20pt;
     height: 70px;
     text-decoration: none;
     grid-column: 1/9;
@@ -100,8 +107,9 @@ li{
     border: 3px solid white;
     color: white;
     grid-template-rows: 1fr;
-    grid-template-columns: 1fr 2fr 1fr 5fr 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 7fr 1fr 2fr 1fr;
 }
+
 a{
     text-decoration: none;
     color:white;
@@ -125,10 +133,20 @@ h1{
     width: 500px;
     grid-column: 2;
     color: lightblue;
+    background-color: rgb(0, 102, 0);
 }
 h2{
-    border: 2px solid green;
+    border: 2px solid rgb(0, 102, 0);
 }
 p{
-    border: 2px solid green;
+    border: 2px solid rgb(0, 102, 0);
+}
+@media only screen and (max-width: 750px){
+    body{
+        width: 30%;
+    }
+    .models, .shop-signin{
+        display: none;
+    }
+    
 }
