--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,12 @@ body{
     justify-content: center;
     width:100%;
     background-color: bisque;
+    margin-top: 0%;
 }
 .wrapper{
     display: grid;
     width: 75%;
-    grid-template-rows: .8fr 4fr 4fr .2fr;
+    grid-template-rows: .9fr 4fr 4fr .2fr;
     grid-template-columns: 1fr 1fr .4fr;
 }
 
@@ -44,6 +45,7 @@ body{
     background-color: rgb(0, 102, 0);
     flex-direction: column;
     padding: 10px;
+    padding-top: 50px;
 }
 
 .sidenav div{
@@ -82,6 +84,7 @@ body{
     grid-column: 1/3;
     border: 2px solid black;
     padding: 10px;
+    min-height: 300px;
 }
 .postarea2{
     grid-row: auto;
@@ -134,6 +137,7 @@ h1{
     grid-column: 2;
     color: lightblue;
     background-color: rgb(0, 102, 0);
+    text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 h2{
     border: 2px solid rgb(0, 102, 0);
